--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="Program and Information about the Beachparty by Markus and Renata Semmel in September 2023 in Sant Andreu de Llavaneras" />
+		<title>Semmels Beachparty</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
